--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -108,7 +108,9 @@
     <dimen name="chat_group_list_photo_size">30dp</dimen>
     <dimen name="chat_group_list_photo_padding">2dp</dimen>
 
+    <dimen name="status_indicator_bg_size">16dp</dimen>
     <dimen name="status_indicator_size">12dp</dimen>
+    <dimen name="status_indicator_margin">2dp</dimen>
     <dimen name="avatar_large_size">100dp</dimen>
 
     <!--drawer-->
